# datasmith

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: otel.md  research.md
docs/benchmarks/: gsm8k-qwen-dpo-results.json  gsm8k-qwen-dpo.md
examples/: otel-traces.json  seeds.jsonl  spans.jsonl
src/asi/: __init__.py  cli.py  core.py  export.py  io.py  models.py  otel.py  prompts.py  providers.py  seed_constructor.py  types.py
testing/: codex-dpo-export-preset.md  codex-hf-export-destination.md  main.md
tests/: test_cli.py  test_export.py  test_io.py  test_otel_ingestion.py  test_pipeline.py  test_seed_constructor.py
