[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "datasmith"
version = "0.1.0"
description = "Provider-agnostic SDK and CLI for web-grounded seed construction and weak-vs-strong synthetic data generation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "DataSmith contributors" }]
keywords = ["synthetic-data", "self-instruct", "opentelemetry", "llm", "evals"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
asi = "asi.cli:main"
datasmith = "asi.cli:main"

[project.urls]
Homepage = "https://github.com/Atharva-Kanherkar/datasmith"
Issues = "https://github.com/Atharva-Kanherkar/datasmith/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/asi"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
